{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 96,
  "lineage": "34a0876d-cfd6-0820-8e08-5f9d562e9f65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:security-group/sg-09fb8b75d3805fad7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09fb8b75d3805fad7",
            "ingress": [],
            "name": "terraform-20220614181753186400000001",
            "name_prefix": "terraform-",
            "owner_id": "911406876052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "for_prac"
            },
            "tags_all": {
              "Name": "for_prac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "202.163.113.168/32"
            ],
            "description": null,
            "from_port": 6555,
            "id": "sgrule-4062964356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09fb8b75d3805fad7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "module.my_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:internet-gateway/igw-0091714032111620b",
            "id": "igw-0091714032111620b",
            "owner_id": "911406876052",
            "tags": {
              "Name": "prod-vpc-igw",
              "TF": "True"
            },
            "tags_all": {
              "Name": "prod-vpc-igw",
              "TF": "True"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0091714032111620b",
            "id": "r-rtb-0553188bd9c3e5c891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0553188bd9c3e5c89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_module.aws_internet_gateway.my_igw",
            "module.my_module.aws_route_table.public_rt",
            "module.my_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:route-table/rtb-0553188bd9c3e5c89",
            "id": "rtb-0553188bd9c3e5c89",
            "owner_id": "911406876052",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-vpc-Pub-RT"
            },
            "tags_all": {
              "Name": "prod-vpc-Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f713010d59d7c680",
            "route_table_id": "rtb-0553188bd9c3e5c89",
            "subnet_id": "subnet-0c33008c1a3ce3b96"
          },
          "dependencies": [
            "module.my_module.aws_route_table.public_rt",
            "module.my_module.aws_subnet.public_subnet",
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0466ae050bac20954",
            "route_table_id": "rtb-0553188bd9c3e5c89",
            "subnet_id": "subnet-05e8bd8c9b863b368"
          },
          "dependencies": [
            "module.my_module.aws_route_table.public_rt",
            "module.my_module.aws_subnet.public_subnet",
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064cb41ad2e34da7d",
            "route_table_id": "rtb-0553188bd9c3e5c89",
            "subnet_id": "subnet-00a44c99d9ab7b4f9"
          },
          "dependencies": [
            "module.my_module.aws_route_table.public_rt",
            "module.my_module.aws_subnet.public_subnet",
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:subnet/subnet-0432a8f3956eefed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0432a8f3956eefed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911406876052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:subnet/subnet-0d34e9cc66797ce71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d34e9cc66797ce71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911406876052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:subnet/subnet-0c33008c1a3ce3b96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33008c1a3ce3b96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911406876052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:subnet/subnet-05e8bd8c9b863b368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e8bd8c9b863b368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911406876052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:subnet/subnet-00a44c99d9ab7b4f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a44c99d9ab7b4f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911406876052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0651e95e0b10ac9e2"
          },
          "dependencies": [
            "module.my_module.aws_vpc.my_vpc",
            "module.my_module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.my_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911406876052:vpc/vpc-0651e95e0b10ac9e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f2f3b6401efbc87b",
            "default_route_table_id": "rtb-03528f3758768d542",
            "default_security_group_id": "sg-03264c8eba50566d6",
            "dhcp_options_id": "dopt-01e6e3baf67682897",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0651e95e0b10ac9e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03528f3758768d542",
            "owner_id": "911406876052",
            "tags": {
              "Name": "prod-vpc",
              "TF": "True"
            },
            "tags_all": {
              "Name": "prod-vpc",
              "TF": "True"
            }
          }
        }
      ]
    }
  ]
}